# podman-ai-lab-stack

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-stack.yaml
src/podman_ai_lab_stack/: __init__.py  config.py  podman_ai_lab.py  run.yaml
src/podman_ai_lab_stack/providers.d/remote/inference/: podman-ai-lab.yaml
