[build-system]
requires = ["setuptools>=70.1.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podman-ai-lab-stack"
version = "0.12.0"
description = "Podman AI Lab provider for Llama Stack"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
"podman_ai_lab_stack" = ["providers.d/**/*", "run.yaml"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.ruff]
extend-exclude = ["*.ipynb"]
